--- a/frontend/src/components/Construction/Construction.css
+++ b/frontend/src/components/Construction/Construction.css
@@ -1,12 +1,11 @@
 .construction-container{
-    background-color: #cacccd;
+    background-color: rgba(255, 255, 255, .8);
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    border: 1px solid;
     justify-content: space-between;
-    width: 300px;
-    height: 65px;
+    width: 100%;
+    height: 60px;
     border-radius: 2px;
     margin: 5px;
 }
@@ -15,7 +14,7 @@
     padding: 0px;
     background-repeat:no-repeat;
     background-size:contain;
-    width:80px;
+    width:27%;
 }
 .right-side-container{
     display: flex;
